update category